fixes compiler warnings